2015-09-22 huku <huku@grhack.net>

    * Renamed `get_immediate_is_signed()' to `is_immediate_signed()'.
    * `XED_OPVIS_XXX' constants are now visible to Python.


2015-09-21 huku <huku@grhack.net>

    * Fixed bug (invalid return type) in `get_scale()'.


2015-08-17 huku <huku@grhack.net>

    * Renamed `InvalidOffsetException' to `InvalidOffsetError'.
    * One year of `pyxed' development; it's not WIP any more.


2015-06-26 huku <huku@grhack.net>

    * Fixed invalid typecast in "pyxed.c".
    * Implemented `get_operand_length()', `get_operand_length_bits()' and
      `get_memory_operand_length()' in class `Instruction'.
    * Updated "README.md".
    * Added "encoder.c" and "encoder.h".


2015-03-10 huku <huku@grhack.net>

    * Added "Makefile.nmake"; makefile for Microsoft's `nmake' utility.
    * Modified source to make it compile on Microsoft Windows (see "Makefile.nmake").
    * Tested on latest PIN (pin-2.14-71313).
    * Fixed compiler warning in "instruction.c".
    * Fixed comment typo in "decoder.c".
    * Implemented `get_scale()' in class `Instruction'.
    * `XED_OPERAND_XXX' constants are now visible to Python.


2014-12-23 huku <huku@grhack.net>

    * Class `XED' was renamed to `Decoder'.
    * Fixed typo in "README.md" and "NOTES.md".


2014-12-10 huku <huku@grhack.net>

    * Introduced new class `Rflags' that represents the CPU flags register
      contents.
    * Implemented new methods in class `Instruction'.
    * Added "dump_rflags.py" in "examples/".


2014-11-25 huku <huku@grhack.net>

    * Implemented new methods in class `Instruction'.


2014-10-20 huku <huku@grhack.net>

    * Implemented new methods in class `Instruction' and class `Operand'.
    * Cleaned up and reordered function definitions in "operand.c".
    * Fixed several compiler warnings on LLVM (Mac OS X).
    * Functions `is_register()' and `is_memory_addressing_register()' of class
      `Operand' were modified to return a boolean.